updated - multiple imports

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ BDTOPO_2-0_TOUSTHEMES_SHP_LAMB93_D02A_2019-05-23/
 BDTOPO_2-0_TOUSTHEMES_SHP_LAMB93_D02B_2019-05-23/
 BDTOPO_2-2_TOUSTHEMES_SHP_LAMB93_D02A_2018-03-29/
 BDTOPO_2-2_TOUSTHEMES_SHP_LAMB93_D02B_2018-03-29/
+*.DXF
